added header and footer bars

--- a/_posts/2016-09-03-bloggin.md
+++ b/_posts/2016-09-03-bloggin.md
@@ -16,6 +16,6 @@ So here I am, 8 days away from beginning the adventure of The Iron Yard in Ruby 
 
 And my personal tagline for this experience? The one I hope to embrace and just #GSD?
 
-<blockquote>Run with scissors.  Walk with erasers.</blockquote>
+<blockquote>All things are difficult before they are easy.</blockquote>
 
-Yeah, feel free to borrow that one. I'm a regular Dr. Seuss of eloquence. 
+Yeah, feel free to borrow that one. I'm a regular Dr. Seuss of eloquence.
