Fixed in post links being white

--- a/_posts/2016-09-03-bloggin.md
+++ b/_posts/2016-09-03-bloggin.md
@@ -4,11 +4,11 @@ title: "Bloggin'"
 date: 2016-09-03
 ---
 
-First post using <a class="post_link" href="https://jekyllrb.com/">Jekyll</a> and <a class="post_link" href="https://pages.github.com/">Github pages</a>. Very surreal. Probably should be working on more Rails and Ruby tutorials! (But let's be honest - making things pretty is a great distraction.)
+First post using <a class="post-link" href="https://jekyllrb.com/">Jekyll</a> and <a class="post-link" href="https://pages.github.com/">Github pages</a>. Very surreal. Probably should be working on more Rails and Ruby tutorials! (But let's be honest - making things pretty is a great distraction.)
 
 Took our instructor's advice and used Github pages for this blogging thing to really stretch my understanding of working in the command line, in the raw folders and files, and to just learn something new. Who needs that crutch, Wordpress, amiright?
 
-Alright, so I guess I should introduce myself. I'm in my mid-20s, have two dogs, a husband, and love bright colors. I recently quit my marketing job at a science museum so I could pursue something I really love doing - problem solving with the help of technology. I led two website redesigns at my previous job and as tedious, frustrating, fascinating, exhilarating, and challenging as they were, I just couldn't leave the excitement to once every five to ten years. So I spent the last year teaching myself Javascript and implementing <a class="post_link" href="http://getbootstrap.com/">Bootstrap</a> to really stretch the bounds of our most recent redesign. And I just loved it. I wanted to do more learning and typing, and command line than marketing tasks. So I was at a crossroads. Unfortunately, working at a small organization that did great things meant there wasn't capacity for me to pursue more education and experience while still managing my workload. Tough decision #1: Quitting a job with people I loved and a mission that's hard to beat.
+Alright, so I guess I should introduce myself. I'm in my mid-20s, have two dogs, a husband, and love bright colors. I recently quit my marketing job at a science museum so I could pursue something I really love doing - problem solving with the help of technology. I led two website redesigns at my previous job and as tedious, frustrating, fascinating, exhilarating, and challenging as they were, I just couldn't leave the excitement to once every five to ten years. So I spent the last year teaching myself Javascript and implementing <a class="post-link" href="http://getbootstrap.com/">Bootstrap</a> to really stretch the bounds of our most recent redesign. And I just loved it. I wanted to do more learning and typing, and command line than marketing tasks. So I was at a crossroads. Unfortunately, working at a small organization that did great things meant there wasn't capacity for me to pursue more education and experience while still managing my workload. Tough decision #1: Quitting a job with people I loved and a mission that's hard to beat.
 
 Tough decision #2: Who do I trust to teach me enough <em>and</em> the right things so I could pivot in my career and find another job after essentially being unemployed for 3 months? So, why choose The Iron Yard? Well, to be honest, it's been something in the back of my mind for the last 18 months or so. I always said after graduating from college (early, because I just couldn't wait to get out) I'd never go back to a formal school environment. But that's the great thing about The Iron Yard! You're sitting in class, sure, but you're tasked with learning at an extremely quick pace, so many things, that at the end of three months you'll be able to build websites and web apps and make something that does something! Who wouldn't want to spend three months doing that? And hopefully spend the rest of their career continuing to learn, practice, and create?
 
